fixed update again

--- a/mobile/app/illiniStudent/app/src/main/AndroidManifest.xml
+++ b/mobile/app/illiniStudent/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jessica.illinistudent" >
+    package="com.example.jessicamedintz.illinistudent" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,24 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Calendar">
-            </activity>
-        <activity
-            android:name=".Tasks">
-        </activity>
-        <activity
-            android:name=".Web">
-        </activity>
-        <activity
-            android:name=".Professors">
-        </activity>
-        <activity
-            android:name=".Schedule">
-        </activity>
-        <activity
-            android:name=".Settings">
-        </activity>
+        <activity android:name=".Cal"/>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".NewUser"></activity>
+        <activity android:name=".Professors"></activity>
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".Web"></activity>
+        <activity android:name=".Schedule"></activity>
+        <activity android:name=".Tasks"></activity>
+            <activity android:name=".Settings"></activity>
     </application>
 
 </manifest>
