--- a/mobile/app/illiniStudent/app/build.gradle
+++ b/mobile/app/illiniStudent/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.jessica.illinistudent"
+        applicationId "com.example.jessicamedintz.illinistudent"
         minSdkVersion 17
         targetSdkVersion 21
         versionCode 1
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    //compile files('src/main/res/libs/commons-io-2.4.jar')
+    compile files('src/main/res/libs/json-simple-1.1.1.jar')
+    compile files('src/main/res/libs/commons-io-2.4.jar')
 }
