--- a/mobile/app/illiniStudent/app/src/main/AndroidManifest.xml
+++ b/mobile/app/illiniStudent/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:allowBackup="true">
         <activity
             android:name=".Login"
             android:label="@string/app_name" >
